--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@alfalab/core-components": "^44.5.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "plural-ru": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
